<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.RecipeEditFragment"
    tools:ignore="ScrollViewCount">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/saveEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/save"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_check_24dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closeEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/close"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_close_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title"
            android:minHeight="48dp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextEdit"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/european"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="@string/european"
                android:text="@string/european" />

            <com.google.android.material.chip.Chip
                android:id="@+id/asian"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="@string/asian"
                android:text="@string/asian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/panAsian"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="@string/panAsian"
                android:text="@string/panAsian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/oriental"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="@string/oriental"
                android:text="@string/oriental" />

            <com.google.android.material.chip.Chip
                android:id="@+id/american"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="@string/american"
                android:text="@string/american" />

            <com.google.android.material.chip.Chip
                android:id="@+id/russian"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="@string/russian"
                android:text="@string/russian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/mediterranean"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="@string/mediterranean"
                android:text="@string/mediterranean" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authorTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_author"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupEdit" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipeStepsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/authorTextEdit"
            tools:listitem="@layout/recipe_step_edit" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Add Recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
