<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.FeedFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/dummyImage"
        android:layout_width="92dp"
        android:layout_height="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cookie_24dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dummyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dummyImage"
        android:text="Add new recipe to start" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:label="Label"
        android:hint="Search"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/filter"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Filter Button"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintStart_toEndOf="@+id/search_bar"
        app:srcCompat="@drawable/ic_baseline_sort_24dp" />

        <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
            android:visibility="gone"
            tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar">

            <LinearLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/titleTextEdit"
                    app:selectionRequired="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/european"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="@string/european"
                        android:text="@string/european" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/asian"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="@string/asian"
                        android:text="@string/asian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/panAsian"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="@string/panAsian"
                        android:text="@string/panAsian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/oriental"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="@string/oriental"
                        android:text="@string/oriental" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/american"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="@string/american"
                        android:text="@string/american" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/russian"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="@string/russian"
                        android:text="@string/russian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/mediterranean"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="@string/mediterranean"
                        android:text="@string/mediterranean" />

                </com.google.android.material.chip.ChipGroup>

                <ImageButton
                    android:id="@+id/close_navigation_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="Close filter"
                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24dp" />
            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>


    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recipesRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintTop_toBottomOf="@+id/search_bar"
    tools:layout_editor_absoluteX="0dp"
    tools:listitem="@layout/recipe_card" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="Add Recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="Favorite Recipes"
        app:layout_constraintBottom_toTopOf="@+id/fab_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_star_fill_24dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="search_bar"/>

</androidx.constraintlayout.widget.ConstraintLayout>